--- a/css/main.css
+++ b/css/main.css
@@ -46,10 +46,13 @@
   border-bottom: 1px solid #3c3b3b;
 }
 .search-item:hover {
-  background-color: #03afc9;
+  color: #03afc9;
 }
 #home-button {
   cursor: pointer;
+}
+#home-button:hover {
+  color: #03afc9;
 }
 
 #main-content {
@@ -112,28 +115,29 @@
   justify-content: center;
   color: green;
   width: 50%;
-  padding: 10px;
   font-size: 20px;
   border: 1px solid green;
   background-color: #fff;
   border-radius: 10px;
+  box-shadow: 2px 3px #003300;
+  transition: all 0.3s ease;
+  cursor: pointer;
 }
 .fa-thumbs-up {
-  font-size: 20px;
-  color: green;
   border: none;
   text-align: center;
   font-weight: 500;
-  text-transform: lowercase;
   width: 100%;
   height: 100%;
+  padding: 20px;
 }
+
 /* Afterclick effects */
 .clicked {
   background-color: green;
   color: white;
-  border-radius: 10px;
 }
+
 /* Single card rendering */
 .detail-wrapper {
   background-color: white;
